Capitulo 5 casi acabado

--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -158,30 +158,34 @@ En esta sección se presentan los requisitos relacionados con las funcionalidade
               \item \textbf{RF 6 - Responder preguntas: }Los usuarios podrán responder las preguntas de cada tipo en la lección que estén.
                     \begin{itemize}
                         \item \textbf{RF 6.1 - Responder con texto: }Los usuarios podrán responder preguntas que necesiten insertar texto como respuesta.
-                        \item \textbf{RF 6.2 - Responder seleccionando una opción: }Los usuarios podrán responder preguntas que necesiten seleccionar una opción de un conjunto.
-                        \item \textbf{RF 6.3 - Responder tocando una nota: }Los usuarios podrán responder preguntas que necesiten tocar una nota de un instrumento y captarla por el micrófono.
+                        \item \textbf{RF 6.2 - Responder seleccionando varias opciones: }Los usuarios podrán responder preguntas que necesiten seleccionar varias opciones de un conjunto.
+                        \item \textbf{RF 6.3 - Responder seleccionando una opción: }Los usuarios podrán responder preguntas que necesiten seleccionar una opción de un conjunto.
+                        \item \textbf{RF 6.4 - Responder tocando una nota: }Los usuarios podrán responder preguntas que necesiten tocar una nota de un instrumento y captarla por el micrófono.
                     \end{itemize}
 
               \item \textbf{RF7 - Consultar ranking: }Los usuarios podrán consultar la clasificación global de los usuarios.
-              \item \textbf{RF8 - Consultar progreso: } Los usuarios podrán consultar su progreso y sus logros obtenidos en su perfil.
-          \end{itemize}
+              \item \textbf{RF8 - Consultar progreso de perfil: } Los usuarios podrán consultar su progreso y sus logros obtenidos en su perfil.
+              \item \textbf{RF9 - Consultar perfiles ajenos: } Los usuarios podrán visualizar el perfil de otros usuarios y ver sus logros.
+              \item \textbf{RF22 - Consultar progreso de lección: } Los usuarios podrán consultar el progreso de una lección en concreto.
+
+            \end{itemize}
     \item \textbf{Profesores/Encargados}
           \begin{itemize}
-              \item \textbf{RF 9 - Obtener lista de lecciones: } Los profesores podrán obtener una lista de todas las lecciones que existen en el sistema.
-              \item \textbf{RF 10 - Crear lección: }Los profesores podrán crear nuevas lecciones.
-              \item \textbf{RF 11 - Eliminar lección: }Los profesores podrán eliminar lecciones ya existentes.
-              \item \textbf{RF 12 - Modificar lecciones: }Los profesores podrán modificar el texto y el contenido multimedia de las distintas lecciones.
-              \item \textbf{RF 13 - Crear preguntas: } Los profesores podrán crear nuevas preguntas sobre las distintas lecciones.
-              \item \textbf{RF 14 - Obtener lista de preguntas: } Los profesores podrán obtener una lista de todas las preguntas que existen en el sistema.
-              \item \textbf{RF 15 - Modificar preguntas: } Los profesores podrán modificar preguntas ya creadas.
-              \item \textbf{RF 16 - Eliminar preguntas: } Los profesores podrán eliminar preguntas del sistema.
+              \item \textbf{RF 10 - Obtener lista de lecciones: } Los profesores podrán obtener una lista de todas las lecciones que existen en el sistema.
+              \item \textbf{RF 11 - Crear lección: }Los profesores podrán crear nuevas lecciones.
+              \item \textbf{RF 12 - Eliminar lección: }Los profesores podrán eliminar lecciones ya existentes.
+              \item \textbf{RF 13 - Modificar lecciones: }Los profesores podrán modificar el texto y el contenido multimedia de las distintas lecciones.
+              \item \textbf{RF 14 - Crear preguntas: } Los profesores podrán crear nuevas preguntas sobre las distintas lecciones.
+              \item \textbf{RF 15 - Obtener lista de preguntas: } Los profesores podrán obtener una lista de todas las preguntas que existen en el sistema.
+              \item \textbf{RF 16 - Modificar preguntas: } Los profesores podrán modificar preguntas ya creadas.
+              \item \textbf{RF 17 - Eliminar preguntas: } Los profesores podrán eliminar preguntas del sistema.
           \end{itemize}
     \item \textbf{Administradores}
           \begin{itemize}
-              \item \textbf{RF 17 - Modificar datos de usuarios: }Los administradores podrán modificar los datos de un usuario.
-              \item \textbf{RF 18 - Crear usuario: }Los administradores podrán crear usuarios en el sistema.
-              \item \textbf{RF 19 - Obtener lista de usuarios: } Los administradores podrán obtener una lista con todos los usuarios registrados en el sistema.
-              \item \textbf{RF 20 - Eliminar usuario: }Los administradores podrán eliminar usuarios registrados en el sistema.
+              \item \textbf{RF 18 - Modificar datos de usuarios: }Los administradores podrán modificar los datos de un usuario.
+              \item \textbf{RF 19 - Crear usuario: }Los administradores podrán crear usuarios en el sistema.
+              \item \textbf{RF 20 - Obtener lista de usuarios: } Los administradores podrán obtener una lista con todos los usuarios registrados en el sistema.
+              \item \textbf{RF 21 - Eliminar usuario: }Los administradores podrán eliminar usuarios registrados en el sistema.
           \end{itemize}
 \end{itemize}
 
