--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -30,15 +30,18 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU2 - } Como usuario quiero iniciar sesión en la aplicación para poder acceder a sus funcionalidades. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU6 - } Como usuario quiero seleccionar una lección para leer el temario. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU7 - } Como usuario quiero empezar un test de una lección. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item \textbf{HU26 - } Como usuario quiero responder una pregunta de un test del tipo escritura de texto. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU8 - } Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 3)
     \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU14 - } Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU15 - } Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU16 - } Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU17 - } Como profesor quiero eliminar imágenes de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU17 - } Como profesor quiero eliminar contenido multimedia de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU27 - } Como profesor quiero añadir preguntas a un test del tipo escritura de texto. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU18 - } Como profesor quiero añadir preguntas a un test del tipo selección múltiple. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU19 - } Como profesor quiero añadir preguntas a un test del tipo selección única. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU20 - } Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 1)
@@ -51,6 +54,7 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU5 - } Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 0.5)
     \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
 
 
 \end{itemize}
@@ -109,6 +113,7 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \subsection{Sprint \#6 - Tests y progreso}
 \textit{03/03/2023   -   17/03/2023}
 \begin{itemize}
+    \item Realizar la HU26 - Como usuario quiero responder una pregunta de un test del tipo escritura de texto. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item Realizar la HU8 - Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item Realizar la HU9 - Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item Realizar la HU11 - Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 0.5)
@@ -127,16 +132,17 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \begin{itemize}
 
 \item Realizar la HU13 - Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU28 - Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU14 - Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU15 - Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU16 - Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 1)
-\item Realizar la HU17 - Como profesor quiero eliminar imágenes de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU17 - Como profesor quiero eliminar contenido multimedia de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
 \end{itemize}
 
 \subsection{Sprint \#9 - Funcionalidades del profesor con tests}
 \textit{14/04/2023   -   28/04/2023}
 \begin{itemize}
-
+\item Realizar la HU27 - Como profesor quiero añadir preguntas a un test del tipo escritura de texto. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU18 - Como profesor quiero añadir preguntas a un test del tipo selección múltiple. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU19 - Como profesor quiero añadir preguntas a un test del tipo selección única. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU20 - Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 1)
