--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -34,9 +34,10 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU8 - } Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 3)
+    \item \textbf{HU29 - } Como profesor quiero ver una lista de todas las preguntas. (Prioridad: Alta | Puntos de Historia: 0.25)
     \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
-    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.25)
     \item \textbf{HU14 - } Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU15 - } Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU16 - } Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 1)
@@ -47,6 +48,7 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU20 - } Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU21 - } Como profesor quiero eliminar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.25)
     \item \textbf{HU22 - } Como profesor quiero modificar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU30 - } Como administrador quiero ver una lista de todos los usuarios. (Prioridad: Media | Puntos de Historia: 0.25)
     \item \textbf{HU24 - } Como administrador quiero modificar los datos de un usuario. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU25 - } Como administrador quiero eliminar un usuario. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU23 - } Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
@@ -54,9 +56,6 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU5 - } Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 0.5)
     \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
-
-
 \end{itemize}
 
 \section{Sprints}
@@ -107,6 +106,8 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
     \item Realizar la HU2 - Como alumno quiero iniciar sesión en la aplicación. (Prioridad: Alta | Puntos de Historia: 1)
     \item Realizar la HU6 - Como usuario quiero seleccionar una lección para leer el temario. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item Realizar la HU7 - Como usuario quiero empezar un test de una lección. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item Realizar la HU29 - Como profesor quiero ver una lista de todas las preguntas. (Prioridad: Alta | Puntos de Historia: 0.25)
+
 \end{itemize}
 
 
@@ -132,7 +133,7 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \begin{itemize}
 
 \item Realizar la HU13 - Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
-\item Realizar la HU28 - Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU28 - Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.25)
 \item Realizar la HU14 - Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU15 - Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
 \item Realizar la HU16 - Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 1)
@@ -154,23 +155,25 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \textit{28/04/2023   -   12/05/2023}
 \begin{itemize}
 \item Realizar la HU24 - Como administrador quiero modificar los datos de un usuario. (Prioridad: Media | Puntos de Historia: 1)
+\item Realizar la HU30 - Como administrador quiero ver una lista de todos los usuarios. (Prioridad: Media | Puntos de Historia: 0.25)
 \item Realizar la HU25 - Como administrador quiero eliminar un usuario. (Prioridad: Media | Puntos de Historia: 0.5)
-\item Realizar la HU23 - Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
-\item Realizar la HU12 - Como usuario quiero ver el ranking de usuarios. (Prioridad: Baja | Puntos de Historia: 0.5)
+\item Realizar la HU3 - Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU4 - Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+
 \end{itemize}
 
-\subsection{Sprint \#11 - Pruebas y finalización del proyecto}
+\subsection{Sprint \#11 - Funcionalidades poco prioritarias y valor añadido}
 \textit{12/05/2023   -   26/05/2023}
 \begin{itemize}
     \item Realizar la HU5 - Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 0.5)
-    \item Realizar la HU3 - Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 0.5)
-    \item Realizar la HU4 - Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+    \item Realizar la HU23 - Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
+    \item Realizar la HU12 - Como usuario quiero ver el ranking de usuarios. (Prioridad: Baja | Puntos de Historia: 0.5)
+    \item Añadir funcionalidad de valor añadido (a definir)
     \end{itemize}
     
     \subsection{Sprint \#12 - Pruebas, conclusión y finalización del proyecto}
 \textit{26/05/2023   -   09/06/2023}
 \begin{itemize}
-
     \item Redactar Capítulo 7 - Implementación
     \item Realizar mejoras de código.
 
@@ -194,14 +197,14 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 
 
 \section{Diagrama de Gantt}
-
+Por último, se muestra el diagrama de Gantt de la planificación del proyecto, dividido en Sprints. En él se puede ver la duración de cada Sprint y la proporción de estos en el tiempo total del proyecto.
 
 \begin{figure}[H]
 
     \centering
     \centerline{\includegraphics[width=1.25\textwidth]{imagenes/c4/gantt.png}}
     \caption{Diagrama de Gantt de la planificación del proyecto, divivido por Sprints.}
-    \label{fig:artly}
+    \label{fig:diagrama_gantt}
     
     
 \end{figure}
