--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -21,6 +21,7 @@
 %\RequirePackage[Glenn]{fncychap}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
+\usepackage[export]{adjustbox}
 \usepackage{afterpage}
 \usepackage{makecell}
 \usepackage{longtable}
